# flashattn

./: CMakeLists.txt  README.md  debug_output.txt  extract.py  flashattn-bwd.cu  flashattn-fwd.cu  output.xlsx  pthread-run.sh
attention-results/: attention-N-1024.txt  attention-N-1088.txt  attention-N-1152.txt  attention-N-1216.txt  attention-N-128.txt  attention-N-1280.txt  attention-N-1344.txt  attention-N-1408.txt  attention-N-1472.txt  attention-N-1536.txt  attention-N-1600.txt  attention-N-1664.txt  attention-N-1728.txt  attention-N-1792.txt  attention-N-1856.txt  attention-N-192.txt  attention-N-1920.txt  attention-N-1984.txt  attention-N-2048.txt  attention-N-2112.txt  attention-N-2176.txt  attention-N-2240.txt  attention-N-2304.txt  attention-N-2368.txt  attention-N-2432.txt  attention-N-2496.txt  attention-N-256.txt  attention-N-2560.txt  attention-N-2624.txt  attention-N-320.txt  attention-N-384.txt  attention-N-448.txt  attention-N-512.txt  attention-N-576.txt  attention-N-64.txt  attention-N-640.txt  attention-N-704.txt  attention-N-768.txt  attention-N-832.txt  attention-N-896.txt  (+1 more)
include/: attention.h
src/: attention-decoder.c  attention-prefill.c  flashattn-decoder.c  flashattn-prefill.c  forward.c  util.c
